Atualizando Tela de Recuperação de senha.

--- a/public/pages/password.html
+++ b/public/pages/password.html
@@ -8,20 +8,35 @@
 </head>
 <body>
 <div id="navbar"></div>
-<div class="body-container">
-    <section class="reset-password">
-        <div class="container">
-            <img src="../assets/images/password/Key.png">
-            <h2>Esqueceu sua senha?</h2>
-            <p>Não se preocupe, lhe enviaremos instruções de redefinição</p>
-            <form action="#" method="post">
-                <label id="email" for="email"><b>Email</b></label>
-                <input type="email" id="email" name="email" placeholder="Digite seu Email" required>
-                <button type="submit">Redefinir senha</button>
-            </form>
-            <a href="../index.html" class="back-to-login">← Voltar para Login</a>
+  <section class="password-container">
+    <div class="esq">
+        <img src="../assets/images/password/imageskey.png" alt="">
+    </div>
+    <div class="dir">
+        <div class="titulo">
+            <img src="../assets/images/password/cadeado.png" alt="">
+            <h1>Esqueceu sua senha?</h1>
         </div>
-    </section>
-</div>
+        <h3>Não se preocupe, lhe enviaremos instruções de redefinição.</h3>
+        <button>
+            <img src="../assets/images/password/sms.png" alt="">
+            <div class="infos">
+                <h2>Recuperar via SMS</h2>
+                <h4>Iremos lhe enviar um código pelo seu número de celular.</h4>
+            </div>
+        </button>
+
+        <button>
+            <img src="../assets/images/password/email.png" alt="">
+            <div class="infos">
+                <h2>Recuperar via Email</h2>
+                <h4>Iremos lhe enviar um código para seu Email de recuperação.</h4>
+            </div>
+        </button>
+
+        <button>Enviar</button>
+
+    </div>
+  </section>
 <script src="../assets/js/main.js"></script>
 </body>
