Alterações tela de recuperação de senha

--- a/public/pages/password.html
+++ b/public/pages/password.html
@@ -17,24 +17,24 @@
             <img src="../assets/images/password/cadeado.png" alt="">
             <h1>Esqueceu sua senha?</h1>
         </div>
-        <h3>Não se preocupe, lhe enviaremos instruções de redefinição.</h3>
-        <button>
-            <img src="../assets/images/password/sms.png" alt="">
+        <h3 id="h3texto">Não se preocupe, lhe enviaremos instruções de redefinição.</h3>
+        <button class="butao">
+            <img src="../assets/images/password/sms.png" alt="" class="img2">
             <div class="infos">
                 <h2>Recuperar via SMS</h2>
                 <h4>Iremos lhe enviar um código pelo seu número de celular.</h4>
             </div>
         </button>
 
-        <button>
-            <img src="../assets/images/password/email.png" alt="">
+        <button class="butao">
+            <img src="../assets/images/password/email.png" alt="" class="img2">
             <div class="infos">
                 <h2>Recuperar via Email</h2>
                 <h4>Iremos lhe enviar um código para seu Email de recuperação.</h4>
             </div>
         </button>
 
-        <button>Enviar</button>
+        <button class="enviar">Enviar</button>
 
     </div>
   </section>
