--- a/public/pages/main_screen.html
+++ b/public/pages/main_screen.html
@@ -138,14 +138,21 @@
             });
         });
     </script>
+    
     <div class="tipo">
-        <span><b>Tipo</b></span>
-        <span>Categoria da acomodação</span>
+        <a href="#overlay-distancia">
+            <span><b>Tipo</b></span>
+            <span>Da Acomodação</span>
+        </a>
     </div>
+
     <div class="avaliacao">
-        <span><b>Avaliação</b></span>
-        <span>Em estrelas</span>
+        <a href="#overlay-distancia">
+            <span><b>Avaliação</b></span>
+            <span>Em Estrelas</span>
+        </a>
     </div>
+    
     <div class="botao">
         <img src="../assets/images/main_scream/lupa-branca.png" alt="Lupa para pesquisas">
     </div>
