--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <input type="password" id="senha" placeholder="Digite sua senha aqui">
     
                     <button type="button" onclick="window.location.href='pages/main_screen.html'">Login</button>
-                    <a href="/pages/renter.html">Esqueceu sua senha?</a>
+                    <a href="pages/password.html">Esqueceu sua senha?</a>
                     <p>Não possui cadastro? <a href="pages/register.html">Cadastre-se</a></p>
                 </form>
             </div>
