--- a/public/pages/main_screen.html
+++ b/public/pages/main_screen.html
@@ -41,8 +41,10 @@
         </div>
         <div class="botoes-superior">
             <div class="botao-superior">
-                <p>Editar Perfil</p>
-                <p>Permite alterar suas informações pessoais.</p>
+                <a href="../pages/renter.html" style="text-decoration: none; color: inherit;">
+                    <p>Seu Perfil</p>
+                    <p>Permite alterar suas informações pessoais.</p>
+                </a>
             </div>
             <div class="botao-superior">
                 <p>Configurações</p>
