--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -23,7 +23,7 @@
             <img src="../assets/images/register/back.png" class="background-img" alt="Fundo decorativo" />
             <img src="../assets/images/register/close.png" class="close-btn" alt="Fechar" />
       
-            <form>
+            <form id="registerForm">
               <div class="form-row">
                 <div class="form-group">
                   <label><img src="../assets/images/register/user.png" alt="User" /> User</label>
@@ -81,6 +81,7 @@
             </form>
           </div>
         </div>
+        <script src="../assets/js/database.js"></script>
         <script src="../assets/js/main.js"></script>
     </body>
 </html>
