--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -12,8 +12,9 @@
         <div class="container">
           <div class="left-panel">
             <div class="profile-pic">
-              <img src="../assets/images/register/profile_image.png" alt="Foto de perfil" />
-              <img src="../assets/images/register/camera.png" class="camera-icon" alt="Ícone da câmera" />
+              <img src="../assets/images/register/profile_image.png" alt="Foto de perfil" id="profileImage" />
+              <img src="../assets/images/register/camera.png" class="camera-icon" alt="Ícone da câmera" id="cameraButton" />
+              <input type="file" id="imageInput" accept="image/*" style="display: none;" />
             </div>
             <h1>Seja Bem-Vindo!</h1>
             <p>Preencha os campos com os seu dados</p>
