--- a/public/pages/main_screen.html
+++ b/public/pages/main_screen.html
@@ -42,7 +42,7 @@
         </div>
         <div class="botoes-superior">
             <div class="botao-superior">
-                <a href="../pages/renter.html" style="text-decoration: none; color: inherit;">
+                <a href="../pages/locator.html" style="text-decoration: none; color: inherit;">
                     <p>Seu Perfil</p>
                     <p>Permite alterar suas informações pessoais.</p>
                 </a>
