--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 }
                 
                 try {
-                    const response = await fetch('/auth/login', {
+                    const response = await fetch('api/auth/login', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
