feat: Improve password reset UI with better alignment and button grouping

--- a/public/pages/password.html
+++ b/public/pages/password.html
@@ -40,8 +40,10 @@
                 <input type="email" id="emailInput" placeholder="seu@email.com" required>
                 <div id="emailError" class="error-message" style="display: none;"></div>
             </div>
-            <button class="enviar" onclick="sendCode()">Enviar Código</button>
-            <button class="voltar" onclick="showStep1()">Voltar</button>
+            <div class="button-group">
+                <button class="enviar" onclick="sendCode()">Enviar Código</button>
+                <button class="voltar" onclick="showStep1()">Voltar</button>
+            </div>
         </div>
 
         <!-- Etapa 3: Inserir código -->
@@ -55,8 +57,10 @@
                 <input type="text" id="codeInput" placeholder="000000" maxlength="6" required>
                 <div id="codeError" class="error-message" style="display: none;"></div>
             </div>
-            <button class="enviar" onclick="verifyCode()">Verificar Código</button>
-            <button class="voltar" onclick="showEmailStep()">Voltar</button>
+            <div class="button-group">
+                <button class="enviar" onclick="verifyCode()">Verificar Código</button>
+                <button class="voltar" onclick="showEmailStep()">Voltar</button>
+            </div>
         </div>
 
         <!-- Etapa 4: Nova senha -->
@@ -254,7 +258,7 @@ async function resetPassword() {
 }
 
 function goToLogin() {
-    window.location.href = '/login';
+    window.location.href = '/index.html';
 }
 </script>
 <script src="../assets/js/main.js"></script>
