feat: Add developer carousel with navigation and styling improvements

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -17,19 +17,19 @@
             </div>
 
             <div class="card_direito">
-                <a href=""><img src="../assets/images/about/seta_esq.png" id="seta" alt=""></a>
+                <a href="#" id="prev-btn"><img src="../assets/images/about/seta_esq.png" id="seta" alt=""></a>
                 <div class="perfil">
-                    <img src="../assets/images/about/foto_luis.png" alt="">
+                    <img id="dev-photo" src="../assets/images/about/foto_luis.png" alt="">
                 </div>
                 <img src="../assets/images/about/linha_sobre.png" alt="">
                 <div class="info">
-                    <span><b>Luis Gustavo Luz De Deus Ramos</b></span>
-                    <p>Nascido em 24 de maio de 2004, em Picos, Piauí, é estudante de Sistemas de Informação na Universidade Federal do Piauí (UFPI) e atua como desenvolvedor front-end na Acomoda. Com dedicação e foco, contribui para a criação de interfaces intuitivas e funcionais, sempre buscando soluções inovadoras para melhorar a experiência dos usuários.</p>
+                    <span><b id="dev-name">Luis Gustavo Luz De Deus Ramos</b></span>
+                    <p id="dev-bio">Nascido em 24 de maio de 2004, em Picos, Piauí, é estudante de Sistemas de Informação na Universidade Federal do Piauí (UFPI) e atua como desenvolvedor front-end na Acomoda. Com dedicação e foco, contribui para a criação de interfaces intuitivas e funcionais, sempre buscando soluções inovadoras para melhorar a experiência dos usuários.</p>
                     <div class="container_button">
                         <button id="saibamais">Saiba Mais</button>
                     </div>
                 </div>
-                <a href=""><img src="../assets/images/about/seta_dir.png" id="seta" alt=""></a>
+                <a href="#" id="next-btn"><img src="../assets/images/about/seta_dir.png" id="seta" alt=""></a>
             </div>
             
         </div>
@@ -54,6 +54,7 @@
     </div>
     
 
+    <script src="../assets/js/about.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
 </html>
