Alterações na rotas de inquelino e Locador

--- a/public/pages/main_screen.html
+++ b/public/pages/main_screen.html
@@ -30,7 +30,7 @@
 
         <div class="info-perfil">
             <h3 id="overlay-full-name" class="perfil-nome">Carregando...</h3>
-            <p id="user-email" class="email">Carregando@email.com...</p>
+            <p id="overlay-user-email" class="email">Carregando@email.com...</p>
         </div>
 
         <!-- Botão Fechar -->
@@ -45,7 +45,7 @@
         <!-- Botões Superiores -->
         <div class="botoes-superior">
             <div class="botao-superior">
-                <a href="../pages/locator.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
+                <a href="../pages/locator.html" id="profile-link" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
                     <img src="../assets/images/main_scream/Vector (1).png" class="icone-botao">
                     <p>Seu Perfil</p>
                 </a>
