--- a/public/pages/main_screen.html
+++ b/public/pages/main_screen.html
@@ -33,6 +33,8 @@
             <p id="overlay-user-email" class="email">Carregando@email.com...</p>
         </div>
 
+                <!-- Botão Voltar -->
+        <a href="#" class="voltar-btn">Voltar</a>
         <!-- Botão Fechar -->
         <a href="#" class="close-btn">X</a>
             </div>
@@ -45,10 +47,8 @@
         <!-- Botões Superiores -->
         <div class="botoes-superior">
             <div class="botao-superior">
-                <a href="../pages/locator.html" id="profile-link" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
-                    <img src="../assets/images/main_scream/Vector (1).png" class="icone-botao">
-                    <p>Seu Perfil</p>
-                </a>
+                <img src="../assets/images/main_scream/Vector (1).png" class="icone-botao">
+                <p><a href="../pages/locator.html" id="profile-link">Seu Perfil</a></p>
             </div>
             <div class="botao-superior">
                 <img src="../assets/images/main_scream/Vector (2).png" class="icone-botao">
@@ -71,7 +71,7 @@
                 <p>Idioma</p>
             </div>
             <div class="botao-superior">
-                <img src="../assets/images/main_scream/Ajuda.png" class="icone-botao">
+                <img src="../assets/images/main_scream/Ajuda.png" height="20px" width="20px" class="icone-botao">
                 <p>Ajuda</p>
             </div>
         </div> <!-- Fim dos botões superiores -->
@@ -82,9 +82,9 @@
         </div>
 
         <!-- Botão Sair -->
-        <div class="botao-sair">
+        <div class="botao-sair" id="sair">
             <a href="#" class="sair-btn" id="logout-btn">
-                <img src="../assets/images/main_scream/sair-perfil.png" alt="Sair">
+                <img src="../assets/images/main_scream/sair-perfil.png" width="200px" alt="Sair">
             </a>
         </div>
 
