--- a/public/pages/locator.html
+++ b/public/pages/locator.html
@@ -92,7 +92,7 @@
                     <span>Administre seus imóveis e cadastre seus novos imóveis.</span>
                     <div class="imovel-buttons">
                       <a href="">Ver imóveis</a>
-                      <a href="cadastrar-casa.html" class="imovel-buttons">Cadastrar imóvel</a>
+                      <a href="cadastrar-casa.html">Cadastrar imóvel</a>
                     </div>
                   </div>
                   
